<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.detroitlabs</groupId>
	<artifactId>katalon-mobile-util</artifactId>
	<version>1.13.1</version>
	<packaging>jar</packaging>

	<name>katalon-mobile-util</name>
	<url>https://github.com/detroit-labs/katalon-mobile-util</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- Change this to point to your project's /Drivers directory -->
		<project.target.katalon.directory>/My-Project/Drivers</project.target.katalon.directory>
		<!-- Change this to your Katalon Studio plugins version -->
		<project.target.katalon.version>1.0.0.201906110939</project.target.katalon.version>
	</properties>

	<build>
		<resources> 
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.java</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!-- `mvn install` will copy the built jar to your Katalon project -->
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<id>copy</id>
						<phase>install</phase>
						<configuration>
							<target>
								<echo>ANT TASK - copying output files....</echo>
								<copy todir="${project.target.katalon.directory}" overwrite="true" flatten="true">
									<fileset dir="${project.build.directory}" includes="*.jar" />
								</copy>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>
						--illegal-access=warn
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>
						--illegal-access=warn
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!-- Used to link in the Katalon libraries as if they were an .m2 repo -->
	<repositories>
		<repository>
			<id>my-local-repo</id>
			<url>file://${basedir}/lib</url>
		</repository>
	</repositories>

	<dependencies>		
		<!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-all</artifactId>
			<version>2.5.0</version>
			<type>pom</type>
		</dependency>		
		<dependency>
			<groupId>io.appium</groupId>
			<artifactId>java-client</artifactId>
			<version>6.1.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-testng -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-testng</artifactId>
			<version>0.1.1</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.dom4j/dom4j -->
		<dependency>
			<groupId>org.dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>2.0.1</version>
		</dependency>
		<!-- Older version specifically to support Katalon's ObjectRepository class -->
		<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<!-- Older version specifically to support Katalon's KeywordLogger class -->
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j13 -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j13</artifactId>
			<version>1.0.1</version>
		</dependency>
		<!-- Older version specifically to support Katalon's KeywordLogger class -->
		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<!-- Katalon jars are not included in maven repositories and need to be copied to the ${basedir}/lib --> 
		<!-- See http://mark.koli.ch/maven-add-local-jar-dependency-to-classpath -->
		<dependency>
			<groupId>com.kms.katalon</groupId>
			<artifactId>core</artifactId>
			<version>${project.target.katalon.version}</version>
		</dependency>
		<dependency>
			<groupId>com.kms.katalon.core</groupId>
			<artifactId>mobile</artifactId>
			<version>${project.target.katalon.version}</version>
		</dependency>
		<dependency>
			<groupId>com.kms.katalon.core</groupId>
			<artifactId>webui</artifactId>
			<version>${project.target.katalon.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.12</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.14.3</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-core -->
		<dependency>
		    <groupId>org.powermock</groupId>
		    <artifactId>powermock-core</artifactId>
		    <version>2.0.2</version>
		    <scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-all</artifactId>
		    <version>1.10.19</version>
		    <scope>test</scope>
		</dependency>			
		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito2 -->
		<dependency>
		    <groupId>org.powermock</groupId>
		    <artifactId>powermock-api-mockito2</artifactId>
		    <version>2.0.2</version>
		    <scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4 -->
		<dependency>
		    <groupId>org.powermock</groupId>
		    <artifactId>powermock-module-junit4</artifactId>
		    <version>2.0.2</version>
		    <scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4-rule -->
		<dependency>
		    <groupId>org.powermock</groupId>
		    <artifactId>powermock-module-junit4-rule</artifactId>
		    <version>2.0.2</version>
		    <scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-classloading-xstream -->
		<dependency>
		    <groupId>org.powermock</groupId>
		    <artifactId>powermock-classloading-xstream</artifactId>
		    <version>2.0.2</version>
		    <scope>test</scope>
		</dependency>
		
		
	</dependencies>
	<organization>
		<name>Detroit Labs</name>
		<url>https://www.detroitlabs.com/</url>
	</organization>
</project>
